--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -12,3 +12,6 @@ tokio = { version = "1", features = ["full"] }
 rand = "0.8"
 diesel = { version = "2.2.0", features = ["postgres"] }
 dotenvy = "0.15"
+log = "0.4"
+pretty_env_logger = "0.5.0"
+
