--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,7 @@ services:
     restart: always
     environment:
       DATABASE_URL: postgres://user:password@db:5432/db
+      RUST_LOG: trace
     volumes:
       - ./backend:/usr/src/backend
     command: cargo watch -x run
