--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ services:
     restart: always
     environment:
       DATABASE_URL: postgres://user:password@db:5432/db
-      RUST_LOG: trace
+      RUST_LOG: info
     volumes:
       - ./backend:/usr/src/backend
     command: cargo watch -x run
