--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -4,8 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-axum = "0.6"
-tower-http = { version = "0.3", features = ["cors"] }
+tower-http = { version = "0.5", features = ["cors"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 tokio = { version = "1", features = ["full"] }
@@ -14,4 +13,9 @@ diesel = { version = "2.2.0", features = ["postgres"] }
 dotenvy = "0.15"
 log = "0.4"
 pretty_env_logger = "0.5.0"
-
+jsonwebtoken = "9"
+chrono = "0.4"
+headers = "0.4"
+axum-extra = { version = "0.10.1", features = ["typed-header"] }
+axum = "0.8.3"
+hyper = "1.6.0"
