--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -19,3 +19,5 @@ headers = "0.4"
 axum-extra = { version = "0.10.1", features = ["typed-header"] }
 axum = "0.8.3"
 hyper = "1.6.0"
+async-trait = "0.1.88"
+once_cell = "1.21.3"
