--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -9,7 +9,7 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 tokio = { version = "1", features = ["full"] }
 rand = "0.8"
-diesel = { version = "2.2.0", features = ["postgres"] }
+diesel = { version = "2.2.0", features = ["numeric", "postgres"] }
 dotenvy = "0.15"
 log = "0.4"
 pretty_env_logger = "0.5.0"
@@ -22,3 +22,4 @@ hyper = "1.6.0"
 async-trait = "0.1.88"
 once_cell = "1.21.3"
 thiserror = "2.0.12"
+bigdecimal = { version = "0.4.8", features = ["serde"] }
