--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -17,9 +17,11 @@ jsonwebtoken = "9"
 chrono = "0.4"
 headers = "0.4"
 axum-extra = { version = "0.10.1", features = ["typed-header"] }
-axum = "0.8.3"
+axum = { version = "0.8.3", features = ["ws"] }
 hyper = "1.6.0"
 async-trait = "0.1.88"
 once_cell = "1.21.3"
 thiserror = "2.0.12"
 bigdecimal = { version = "0.4.8", features = ["serde"] }
+futures = "0.3.31"
+features = "0.10.0"
