feat: optimizacija dockerja (SCRUM-125)

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,14 +1,21 @@
-FROM rust:latest
+FROM debian:bullseye-slim AS builder-base
+RUN apt-get update && apt-get install -y curl build-essential libpq-dev pkg-config ca-certificates
+
+RUN curl https://sh.rustup.rs -sSf | sh -s -- -y
+ENV PATH="/root/.cargo/bin:${PATH}"
 
 WORKDIR /usr/src/backend
-
-RUN cargo install cargo-watch
-
-COPY Cargo.toml Cargo.lock ./
-
-RUN mkdir src
-
 COPY . .
 
-CMD ["cargo", "watch", "-x", "run"]
+RUN cargo build --release
+
+FROM debian:bullseye-slim
+RUN apt-get update && apt-get install -y libpq5 && \
+    apt-get clean && rm -rf /var/lib/apt/lists/*
+
+COPY --from=builder-base /usr/src/backend/target/release/backend /usr/local/bin/backend
+COPY .env .env
+
+EXPOSE 8000
+CMD ["backend"]
 
