--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -9,12 +9,12 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 tokio = { version = "1", features = ["full"] }
 rand = "0.8"
-diesel = { version = "2.2.0", features = ["numeric", "postgres"] }
+diesel = { version = "2.2.0", features = ["chrono", "numeric", "postgres"] }
 dotenvy = "0.15"
 log = "0.4"
 pretty_env_logger = "0.5.0"
 jsonwebtoken = "9"
-chrono = "0.4"
+chrono = { version = "0.4", features = ["serde"] }
 headers = "0.4"
 axum-extra = { version = "0.10.1", features = ["typed-header"] }
 axum = { version = "0.8.3", features = ["ws"] }
