--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -5,9 +5,8 @@ WORKDIR /app
 COPY package*.json ./
 RUN npm ci --legacy-peer-deps
 
-COPY .env.prod .env
-
 COPY . .
+ENV VITE_API_URL=copycats.mooo.com:8000
 RUN npm run build
 
 FROM node:23-alpine
