--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,25 +1,26 @@
-FROM rust:1.86-bullseye AS builder
+FROM lukemathwalker/cargo-chef:latest-rust-1 AS chef
+WORKDIR /app
 
-RUN apt-get update && apt-get install -y libpq-dev pkg-config ca-certificates
+FROM chef AS planner
+COPY . .
+RUN cargo chef prepare --recipe-path recipe.json
 
-WORKDIR /usr/src/backend
+FROM chef AS builder
+COPY --from=planner /app/recipe.json recipe.json
+RUN cargo chef cook --release --recipe-path recipe.json
 
 COPY . .
+RUN cargo build --release --bin backend
 
-RUN cargo build --release --target-dir /tmp/build
+FROM debian:bookworm-slim AS runtime
+WORKDIR /app
 
-FROM debian:bullseye-slim
-
-RUN apt-get update && apt-get install -y libpq5 && \
+RUN apt-get update && apt-get install -y libpq5 ca-certificates && \
     apt-get clean && rm -rf /var/lib/apt/lists/*
 
-COPY --from=builder /tmp/build/release/backend /usr/local/bin/backend
+COPY --from=builder /app/target/release/backend /usr/local/bin/app
 
 COPY .env /app/.env
 
-WORKDIR /app
-
 EXPOSE 8000
-
-CMD ["backend"]
-
+ENTRYPOINT ["/usr/local/bin/app"]
