feat: Vnosno polje (SCRUM-60)

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
         "react-error-boundary": "^5.0.0",
+        "react-hook-form": "^7.56.2",
         "react-router": "^7.5.3",
         "tailwindcss": "^4.1.4"
     },
