--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -25,3 +25,4 @@ thiserror = "2.0.12"
 bigdecimal = { version = "0.4.8", features = ["serde"] }
 futures = "0.3.31"
 features = "0.10.0"
+bcrypt = "0.17.0"
