--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,10 +11,12 @@
     },
     "dependencies": {
         "@tailwindcss/vite": "^4.1.4",
+        "leaflet": "^1.9.4",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
         "react-error-boundary": "^5.0.0",
         "react-hook-form": "^7.56.2",
+        "react-leaflet": "^5.0.0",
         "react-router": "^7.5.3",
         "tailwindcss": "^4.1.4"
     },
