--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     },
     "dependencies": {
         "@tailwindcss/vite": "^4.1.4",
+        "js-cookie": "^3.0.5",
         "leaflet": "^1.9.4",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
