--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -9,7 +9,7 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 tokio = { version = "1", features = ["full"] }
 rand = "0.8"
-diesel = { version = "2.2.0", features = ["chrono", "numeric", "postgres"] }
+diesel = { version = "2.2.0", features = ["chrono", "numeric", "postgres", "serde_json"] }
 dotenvy = "0.15"
 log = "0.4"
 pretty_env_logger = "0.5.0"
