--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "dependencies": {
         "@tailwindcss/vite": "^4.1.4",
         "js-cookie": "^3.0.5",
+        "jwt-decode": "^4.0.0",
         "leaflet": "^1.9.4",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
