--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@reduxjs/toolkit": "^2.8.2",
         "@tailwindcss/vite": "^4.1.4",
         "js-cookie": "^3.0.5",
         "leaflet": "^1.9.4",
@@ -18,6 +19,7 @@
         "react-error-boundary": "^5.0.0",
         "react-hook-form": "^7.56.2",
         "react-leaflet": "^5.0.0",
+        "react-redux": "^9.2.0",
         "react-router": "^7.5.3",
         "tailwindcss": "^4.1.4"
     },
