feat: Vnosna polja za dogodek (SCRUM-70)

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,12 +10,19 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@emotion/react": "^11.14.0",
+        "@emotion/styled": "^11.14.0",
         "@reduxjs/toolkit": "^2.8.2",
+        "@syncfusion/ej2-react-calendars": "^29.2.5",
+        "@tailwindcss/line-clamp": "^0.4.4",
         "@tailwindcss/vite": "^4.1.4",
+        "dayjs": "^1.11.13",
+        "flowbite": "^3.1.2",
         "js-cookie": "^3.0.5",
         "jwt-decode": "^4.0.0",
         "leaflet": "^1.9.4",
         "react": "^19.0.0",
+        "react-datetime-picker": "^6.0.1",
         "react-dom": "^19.0.0",
         "react-error-boundary": "^5.0.0",
         "react-hook-form": "^7.56.2",
