--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,7 @@
         "react-leaflet": "^5.0.0",
         "react-redux": "^9.2.0",
         "react-router": "^7.5.3",
+        "redux-persist": "^6.0.0",
         "tailwindcss": "^4.1.4"
     },
     "devDependencies": {
