--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,12 +16,14 @@
         "@syncfusion/ej2-react-calendars": "^29.2.5",
         "@tailwindcss/line-clamp": "^0.4.4",
         "@tailwindcss/vite": "^4.1.4",
+        "chart.js": "^4.4.9",
         "dayjs": "^1.11.13",
         "flowbite": "^3.1.2",
         "js-cookie": "^3.0.5",
         "jwt-decode": "^4.0.0",
         "leaflet": "^1.9.4",
         "react": "^19.0.0",
+        "react-chartjs-2": "^5.3.0",
         "react-datetime-picker": "^6.0.1",
         "react-dom": "^19.0.0",
         "react-error-boundary": "^5.0.0",
