--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,8 +10,11 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@chakra-ui/react": "^3.20.0",
         "@emotion/react": "^11.14.0",
         "@emotion/styled": "^11.14.0",
+        "@react-three/drei": "^10.1.2",
+        "@react-three/fiber": "^9.1.2",
         "@reduxjs/toolkit": "^2.8.2",
         "@syncfusion/ej2-react-calendars": "^29.2.5",
         "@tailwindcss/line-clamp": "^0.4.4",
@@ -19,9 +22,12 @@
         "chart.js": "^4.4.9",
         "dayjs": "^1.11.13",
         "flowbite": "^3.1.2",
+        "framer-motion": "^11.18.2",
+        "gsap": "^3.13.0",
         "js-cookie": "^3.0.5",
         "jwt-decode": "^4.0.0",
         "leaflet": "^1.9.4",
+        "ogl": "^1.0.11",
         "react": "^19.0.0",
         "react-chartjs-2": "^5.3.0",
         "react-datetime-picker": "^6.0.1",
@@ -33,7 +39,8 @@
         "react-redux": "^9.2.0",
         "react-router": "^7.5.3",
         "redux-persist": "^6.0.0",
-        "tailwindcss": "^4.1.4"
+        "tailwindcss": "^4.1.4",
+        "three": "^0.177.0"
     },
     "devDependencies": {
         "@eslint/js": "^9.22.0",
