feat: UI za dodajanje in prikazovanje dogodkov in klicanje API (SCRUM-234)

--- a/desktop/db/config_example.json
+++ b/desktop/db/config_example.json
@@ -1,5 +1,5 @@
 {
   "url": "jdbc:postgresql://localhost:port/database_name",
-  "username": "database_username",
-  "password": "database_password"
+  "username": "username",
+  "password": "password"
 }
